[tool.poetry]
name = "twitter-wrapped"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.12.1"
streamlit = "^1.15.2"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.10.0"
flake8 = "^6.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
